# charms

./: Cargo.toml  README.md
.github/workflows/: build-binary.yml  create-release.yml  rust.yml
charms-app-checker/: Cargo.toml
charms-app-checker/src/: bin.rs
charms-app-runner/: Cargo.toml
charms-app-runner/src/: lib.rs
charms-client/: Cargo.toml
charms-client/src/: ark.rs  bitcoin_tx.rs  cardano_tx.rs  lib.rs  tx.rs
charms-data/src/: lib.rs  util.rs
charms-lib/: Cargo.toml  README.md
charms-lib/src/: lib.rs
charms-lib/test/: bitcoin-tx.json  extractAndVerifySpell.node.test.js
charms-proof-wrapper/: Cargo.toml
charms-proof-wrapper/src/: lib.rs  main.rs
charms-sdk/: Cargo.toml
charms-spell-checker/: Cargo.toml
charms-spell-checker/src/: bin.rs  lib.rs
example-projects/charmix/: Cargo.toml  README.md
example-projects/charmix/spells/: mint-nft.yaml  send.yaml
example-projects/charmix/src/: lib.rs
example-projects/toad-token/: Cargo.toml  README.md
example-projects/toad-token/spells/: mint-nft.yaml  mint-token.yaml  send.yaml  send420.yaml
example-projects/toad-token/src/: lib.rs
src/: app.rs  lib.rs  main.rs  script.rs  spell.rs
src/cli/: app.rs  mod.rs  server.rs  spell.rs  tx.rs  wallet.rs
src/tx/: bitcoin_tx.rs  cardano_tx.rs  mod.rs
src/utils/: logger.rs  mod.rs  pool.rs  prover.rs
src/utils/sp1/: cuda.rs  mod.rs
