[package]
name = "charms-app-runner"
description = "Charms app runner"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
charms-data = { path = "../charms-data", version = "0.8.0" }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
wasmi = { version = "0.49.1", default-features = false, features = ["std", "prefer-btree-collections"] }
